Bug 165265 - Find and Replace with font hangs
Summary: Find and Replace with font hangs
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All Linux (All)
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.2.0 target:25.8.3.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Find&Replace-Styles Performance
  Show dependency treegraph
 
Reported: 2025-02-15 19:56 UTC by j.a.swami
Modified: 2025-11-08 15:26 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file in which bug 165265 occurs (88.02 KB, application/vnd.oasis.opendocument.text)
2025-02-16 05:19 UTC, j.a.swami
Details
Screencast showing bug 165265 (1016.49 KB, video/mp4)
2025-02-16 05:25 UTC, j.a.swami
Details
Screenshot of F&R (35.65 KB, image/png)
2025-02-16 11:04 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description j.a.swami 2025-02-15 19:56:41 UTC
Description:
When I wish to replace all instances of Font A with Font B, LO tells me, "To proceed with this action, you must first turn off the 'undo' function. Do you want to turn off the 'undo' function?" If I choose "yes," LO hangs and finally quits. And I'm unable to find any way to disable the "undo" function.

Steps to Reproduce:
1.Open a document (in my case it's a long one).
2.Press ctrl-H to open search and replace
3.Go to "Find" and leave it blank
4. Select "Format" and "font."
5. Choose Font A (any font) and press OK
6. Go to "Replace" and leave it blank
7. Go to "Format" and "font."
8  Choose Font B and press OK
9. Choose "Replace All."

Actual Results:
LO gives the prompt "To proceed with this action, you must first turn off the 'undo' function. Do you want to turn off the 'undo' function?" If I choose "yes," LO hangs and finally quits. 

Expected Results:
LO should replace all instances of Font A with Font B, without a prompt. 

If a prompt is needed, pressing "Yes" should disable the "undo" function and re-enable it once the operation is finished. 

Alternatively, pressing "Yes" should bring me to the place where I can disable the "undo" function manually. 


Reproducible: Always


User Profile Reset: Yes

Additional Info:
I can't find any menu that offers me the opportunity to disable to "undo" function.
Comment 1 m_a_riosv 2025-02-16 00:45:46 UTC
Please attach a sample file, reduce the size as much as possible without private information, and paste the information in Menu/Help/About LibreOffice, there is a copy icon.
Comment 2 j.a.swami 2025-02-16 05:19:12 UTC
Created attachment 199221 [details]
sample file in which bug 165265 occurs

The bug occurs in this file. 
We search for the font "Gentium Book Basic" and wish to replace it with "Gentium."
The described bug appears.
Comment 3 j.a.swami 2025-02-16 05:25:48 UTC
Created attachment 199222 [details]
Screencast showing bug 165265

This screencast shows the result of the bug. 

The screencast leaves out some steps (the fonts to be replaced have already been selected). But it shows the outcome.
Comment 4 j.a.swami 2025-02-16 05:34:41 UTC
Version: 24.8.4.2 (X86_64)
Build ID: 480(Build:2)
CPU threads: 16; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 5 m_a_riosv 2025-02-16 11:04:18 UTC
Created attachment 199226 [details]
Screenshot of F&R

Not reproducible
Version: 24.8.5.2 (X86_64) / LibreOffice Community
Build ID: fddf2685c70b461e7832239a0162a77216259f22
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 6 m_a_riosv 2025-02-16 11:04:48 UTC
Maybe an only Linux issue.
Comment 7 raal 2025-02-16 13:45:41 UTC
No repro with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7da1497aa462e2b719aa9b308a749caf7b9a19b1
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

I got the same dialog as in comment 5. See https://forum.openoffice.org/en/forum/viewtopic.php?t=26582
Comment 8 Buovjaga 2025-10-28 11:10:22 UTC
j.a.swami: do you still see this with 25.8?
Comment 9 j.a.swami 2025-10-28 14:56:03 UTC
(In reply to Buovjaga from comment #8)
> j.a.swami: do you still see this with 25.8?

Regrettably, yes.
Comment 10 Buovjaga 2025-10-28 16:17:12 UTC
This started in 25.2 with 22cb250074606a9e637787245f8e18a11ac5c252 (which was backported to 24.8)
Resolves: tdf#162113 prefer restoring explicit font style selection

I installed these fonts:
https://www.1001fonts.com/gentium-book-basic-font.html
https://software.sil.org/gentium/download/
Comment 11 Caolán McNamara 2025-10-29 17:37:55 UTC
This implies that if, in the font page, that after you select the font name you then delete the contents of the "Style" combobox so that it is blank before choosing ok that the problem doesn't arise.
Comment 12 Caolán McNamara 2025-10-29 17:48:12 UTC
I think I can tweak this so the default behavior is the same for this use case as it was originally, without disrupting tdf#162113
Comment 13 Commit Notification 2025-10-29 19:55:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e419d3927b62cbc90bbfd0f893adb268af38afdf

Resolves: tdf#165265 don't autoselect a font style

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2025-10-30 03:20:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/54aaa6a1e475921573f07d3e5a3a1f22018574bb

Resolves: tdf#165265 don't autoselect a font style

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Buovjaga 2025-10-30 08:29:47 UTC
Verified, thanks

Arch Linux 64-bit
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 38121c6f0208f9db0a6d69e33efc7d1eec0aae31
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 30 October 2025
Comment 16 Commit Notification 2025-11-04 12:15:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-3":

https://git.libreoffice.org/core/commit/f779d55e8bcefdd9376a94ece6bfef0bda64b213

Resolves: tdf#165265 don't autoselect a font style

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 j.a.swami 2025-11-08 15:26:57 UTC
Thank you for fixing this.

Those who dealt with this bug might wish to take interest in another bug I've submitted pertaining to the search-and-replace dialogue: Bug 169254.

Thank you again.