Resolves: tdf#165265 don't autoselect a font style

If nothing was originally selected, then don't pick anything and leave
the combobox empty so the search for style feature doesn't add any
not-explicitly selected font styles by default.

Continue to restore a previously selected style, favouring the last
explicitly selected-by-user style.

Change-Id: Iad04d80305029cc3bbe3e8500ced87085645f9f4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193160
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>